k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:   # How we want to use the allocated volume above.
            - name: postgres-storage # Must be identical name with the above.
              mountPath: /var/lib/postgresql/data            # File path to data we are trying to save in our volume.
              subPath: postgres # All data in our mountPath above will be saved to a folder named postgres (indicated here) in our new volume.
