k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: # Provides access to pods tagged with "web".
    component: web
  ports:
    - port: 3000       # Port on the service.
      targetPort: 3000 # Port on the container.
